Fix navigation brand color for contrast and visibility

--- a/static/sass/styles-embedded.scss
+++ b/static/sass/styles-embedded.scss
@@ -1,5 +1,5 @@
 // colour definitions
-$color-brand: #00302f;
+$color-brand: #fa6340;
 $color-accent: $color-brand;
 $color-navigation-background: #252525;
 
