--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -1,6 +1,6 @@
 // colour definitions
 $ubuntu-orange: #e95420;
-$color-brand: #00302f;
+$color-brand: #fa6340;
 $color-accent: $color-brand;
 $color-navigation-active-bar: $ubuntu-orange;
 
